# TrenDBase

./: README.md  main.py  pyproject.toml
archive/: gsht_connect.py
src/: __init__.py
src/data/: __init__.py  googleAPI.py  twitterAPI.py  twitterAPI2.py
src/data_models/: tweet_model.py  wordict.py
src/utils/: __init__.py  coinbaseAPI.py  tweetHelper.py
