[tool.poetry]
name = "trendbase"
version = "0.1.0"
description = "It extracts trend info from the web and loads them to a google sheet"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
